admission/ValidatingAdmissionPolicy/policies/read-only-root-filesystem/containers/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: read-only-root-filesystem-containers
  annotations:
    kubeapt.io/uuid: "4ed91688-4092-4429-b68d-a29c21f1267e"
spec:
  containers:
  - name: main
    image: busybox:1.36
    command: ["sh", "-c", "sleep 3600"]
    securityContext:
      readOnlyRootFilesystem: false
